--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "es6-tween": "^5.1.0",
     "kuker-emitters": "^6.7.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
