--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+	"deploy": "yarn build && ./deploy"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
