--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-	"deploy": "yarn build && ./deploy"
+    "deploy": "yarn build && ./deploy"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "es6-tween": "^5.1.0",
     "kuker-emitters": "^6.7.3",
+    "lory.js": "^2.5.1",
     "v-bar": "^3.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
